fix column spacing

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -30,7 +30,7 @@ body {
 
 .left-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,0.5fr));
+    grid-template-columns: repeat(3,auto);
     grid-gap: 2rem;
     
 }
